# PSplot

./: .gitignore  CMakeLists.txt  Pipfile  README.md  helper_functions.py  main.cpp  main.py  mainwidget.cpp  mainwidget.h  model.joblib  out.txt  plot_layouts.py  ps-spectraplot.py  psplot.py  pyproject.toml  settings.py  setup.cfg  table_widget.py  test.csv  visualisation_components.py  xticks_problem.py
.github/workflows/: lint_python.yml
resources/: model_PETHDPEPPPSOTHER.joblib  model_lasercut.joblib
